--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,7 @@ defaults:
       comments: true
       share: true
       related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
